Fix alignment in media query for first column

--- a/styles.css
+++ b/styles.css
@@ -193,5 +193,9 @@ a {
     text-align: center;
   }
 
+  .firstcolumn{
+    text-align: center;
+  }
+
 }
   
